--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -2628,8 +2628,8 @@
         "id": ""
     },
     "skills.TMD_BLINK.name": {
-        "en": "",
-        "fr": "",
+        "en": "Blink",
+        "fr": "Déplacement Instantanné",
         "es": "",
         "ch": "",
         "kr": "",
@@ -2638,7 +2638,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Chớp Mắt",
         "ar": "",
         "it": "",
         "pl": "",
@@ -2646,8 +2646,8 @@
         "id": ""
     },
     "skills.TMD_BLINK.effect": {
-        "en": "",
-        "fr": "",
+        "en": "Instantly moves the character to a destination up to 16 yards away. Cannot go through obstacles.",
+        "fr": "Déplace instantanément le personnage vers une destination jusqu'à 16 mètres. Ne peut pas traverser les obsatacles",
         "es": "",
         "ch": "",
         "kr": "",
@@ -2656,61 +2656,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TMD_BLINK.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TMD_BLINK.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TMD_BLINK.effect.level20": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
+        "vi": "Lập tức di chuyển nhân vật đến địa điểm cách đó 16 mét. Không thể đi xuyên vật thể.",
         "ar": "",
         "it": "",
         "pl": "",
@@ -2718,8 +2664,8 @@
         "id": ""
     },
     "skills.TMD_ENERGY_SNATCH.name": {
-        "en": "",
-        "fr": "",
+        "en": "Energy Snatch",
+        "fr": "Vol d'énergie",
         "es": "",
         "ch": "",
         "kr": "",
@@ -2728,7 +2674,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Năng Lượng Bất Chợt",
         "ar": "",
         "it": "",
         "pl": "",
@@ -2736,8 +2682,8 @@
         "id": ""
     },
     "skills.TMD_ENERGY_SNATCH.effect": {
-        "en": "",
-        "fr": "",
+        "en": "Increases Skill Crit ENHC by {0}%",
+        "fr": "Augmente 'Compétence Critique Améliorée' de {0}%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -2746,7 +2692,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Cộng thêm {0}% Tăng Kỹ Bạo.",
         "ar": "",
         "it": "",
         "pl": "",
@@ -2754,8 +2700,8 @@
         "id": ""
     },
     "skills.TMD_ENERGY_SNATCH.effect.level10": {
-        "en": "",
-        "fr": "",
+        "en": "HP max +500",
+        "fr": "PV max +500",
         "es": "",
         "ch": "",
         "kr": "",
@@ -2764,7 +2710,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Máu Tối Đa +500.",
         "ar": "",
         "it": "",
         "pl": "",
@@ -2772,8 +2718,8 @@
         "id": ""
     },
     "skills.TMD_ENERGY_SNATCH.effect.level15": {
-        "en": "",
-        "fr": "",
+        "en": "MP max +80",
+        "fr": "PM max +80",
         "es": "",
         "ch": "",
         "kr": "",
@@ -2782,7 +2728,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Năng Lượng Tối Đa +80.",
         "ar": "",
         "it": "",
         "pl": "",
@@ -2790,8 +2736,8 @@
         "id": ""
     },
     "skills.TMD_ENERGY_SNATCH.effect.level20": {
-        "en": "",
-        "fr": "",
+        "en": "Recovers 20 MP with a Skill Crit. Cannot occur more than once in 3 seconds.",
+        "fr": "Récupère 20 de Mana pour chaque Compétence Critique. Ne peut se produire plus d'une fois toutes les 3 secondes.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -2800,7 +2746,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Phục hồi 20 Năng Lượng khi Kỹ Năng Bạo Kích. Không thể lặp lại trong vòng 3 giây.",
         "ar": "",
         "it": "",
         "pl": "",
