--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -361,7 +361,7 @@
     },
     "UI.stat.DMG_RD":{
         "en":"Damage Reduction",
-        "fr":"Réduction de Dégâts",
+        "fr":"Réduction de dégâts",
         "es":"Reducción del daño",
         "ch":"傷害減免",
         "kr":"피해 감소",
@@ -397,7 +397,7 @@
     },
     "UI.stat.ATK_SPD":{
         "en":"Attack Speed",
-        "fr":"Vitesse d'Attaque",
+        "fr":"Vitesse d'attaque",
         "es":"Velocidad de ataque",
         "ch":"攻擊速度",
         "kr":"공격 속도",
@@ -433,7 +433,7 @@
     },
     "UI.stat.SKILL_ENHC":{
         "en":"Skill Enhanced",
-        "fr":"Compétence Améliorée",
+        "fr":"Compétence améliorée",
         "es":"Habilidad mejorada",
         "ch":"技能增强",
         "kr":"스킬 강화",
@@ -901,7 +901,7 @@
     },
     "UI.stat.HOLY_ATK":{
         "en":"Holy Attack",
-        "fr":"Attaque Sacrée",
+        "fr":"Attaque sacrée",
         "es":"Ataque sagrado",
         "ch":"神聖攻擊",
         "kr":"신성한 공격",
@@ -919,7 +919,7 @@
     },
     "UI.stat.HOLY_ATK.short":{
         "en":"Holy ATK",
-        "fr":"ATQ Sacrée",
+        "fr":"ATK Sacrée",
         "es":"",
         "ch":"神聖攻擊",
         "kr":"",
@@ -970,6 +970,24 @@
         "pl":"",
         "th":"",
         "id":"Luck"
+    },
+    "UI.quest.seek":{
+        "en":"Seek",
+        "fr":"Allez voir",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Tìm",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     },
     "UI.windows.quest-list.title":{
         "en":"Quest",
@@ -1243,7 +1261,7 @@
     },
     "UI.windows.character.tab.gear":{
         "en":"Gear",
-        "fr":"Équipement",
+        "fr":"Equipement",
         "es":"",
         "ch":"裝備",
         "kr":"",
@@ -1351,7 +1369,7 @@
     },
     "UI.windows.bag.tab.gear":{
         "en":"Gear",
-        "fr":"Équip.",
+        "fr":"Equip.",
         "es":"",
         "ch":"裝備",
         "kr":"",
@@ -1945,7 +1963,7 @@
     },
     "UI.windows.craft.btn.stop":{
         "en":"Stop",
-        "fr":"Arrêter",
+        "fr":"Arreter",
         "es":"",
         "ch":"停止",
         "kr":"",
@@ -2177,6 +2195,96 @@
         "th":"",
         "id":"Keterampilan Bakat"
     },
+    "UI.windows.skills.btn.buyPoints":{
+        "en":"Buy Points",
+        "fr":"Acheter Pts",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Mua Điểm",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.skills.btn.upgrade":{
+        "en":"Upgrade",
+        "fr":"Améliorer",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Nâng Cấp",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.skills.buyPoints.popup_title":{
+        "en":"Buy Skill Points",
+        "fr":"Achetez des Points de Compétence",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Mua Điểm Kỹ Năng",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.skills.buyPoints.pointLeft":{
+        "en":"{0} Points left to level up your skill",
+        "fr":"{0} Points restant avant de monter votre compétence de niveau",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"{0} Điểm cần thêm để lên cấp kỹ năng của bạn",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.skills.buyPoints.pointCost":{
+        "en":"Each point cost {0} Black Magic point",
+        "fr":"Chaque point coûte {0} points de magie noire",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Mỗi điểm tốn {0} điểm Hắc Ma Pháp",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.config.title":{
         "en":"Configs",
         "fr":"Paramètres",
@@ -2323,7 +2431,7 @@
     },
     "UI.windows.checkgear.title":{
         "en":"{0}'s Gears Info",
-        "fr":"Équipement de {0}",
+        "fr":"Equipement de {0}",
         "es":"",
         "ch":"",
         "kr":"",
