--- a/Translation/general.json
+++ b/Translation/general.json
@@ -415,7 +415,7 @@
     },
     "general.rarity.exotic":{
         "en":"Exotic",
-        "fr":"Éxotique",
+        "fr":"Exotique",
         "es":"",
         "ch":"",
         "kr":"",
@@ -947,6 +947,42 @@
         "jp":"",
         "pt":"",
         "vi":"Phần Thưởng",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "general.label.maximum.short":{
+        "en":"Max",
+        "fr":"Max",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Tối Đa",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "general.label.nextLevel":{
+        "en":"Next Level",
+        "fr":"Niveau Suivant",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp Tiếp Theo",
         "ar":"",
         "it":"",
         "pl":"",
