--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -181,7 +181,7 @@
     },
     "instance.INSTANCE_20.description.reward.normal":{
         "en": "Lv20 common materials, Costume sets and Runestones.",
-        "fr": "Materiaux communs Nv20, Costumes et Pierres runiques",
+        "fr": "Materiel commun Nv20, Costumes et Pierres runiques",
         "es": "",
         "ch": "",
         "kr": "",
@@ -217,7 +217,7 @@
     },
     "instance.INSTANCE_30.name":{
         "en": "Pirate Camp",
-        "fr": "Camp de Pirates",
+        "fr": "Camp de pirates",
         "es": "",
         "ch": "",
         "kr": "",
@@ -235,7 +235,7 @@
     },
     "instance.INSTANCE_30.description.reward.normal":{
         "en": "Lv30 common materials, Costume sets and Runestones.",
-        "fr": "Matériaux communs Nv30, Costumes et Pierres runiques",
+        "fr": "Materiel commun Nv30, Costumes et Pierres runiques",
         "es": "",
         "ch": "",
         "kr": "",
