--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -6463,7 +6463,7 @@
     },
     "skills.TRH_ENDURANCE_TRAINING.name": {
         "en": "",
-        "fr": "",
+        "fr": "Préparation",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6481,7 +6481,7 @@
     },
     "skills.TRH_ENDURANCE_TRAINING.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente les PV max de ({0} x Nv. Personnage)",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6499,7 +6499,7 @@
     },
     "skills.TRH_ENDURANCE_TRAINING.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "ATQ de Base +8",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6517,7 +6517,7 @@
     },
     "skills.TRH_ENDURANCE_TRAINING.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Précision +2.5%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6535,7 +6535,7 @@
     },
     "skills.TRH_ENDURANCE_TRAINING.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Réduction de Dégâts +5%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6553,7 +6553,7 @@
     },
     "skills.TRH_SURVAVIBILITY.name": {
         "en": "",
-        "fr": "",
+        "fr": "Survie",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6571,7 +6571,7 @@
     },
     "skills.TRH_SURVAVIBILITY.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente Réduction de Dégâts de {0}%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6589,7 +6589,7 @@
     },
     "skills.TRH_SURVAVIBILITY.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "PV max +400",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6607,7 +6607,7 @@
     },
     "skills.TRH_SURVAVIBILITY.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Dégâts Améliorés +2%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6625,7 +6625,7 @@
     },
     "skills.TRH_SURVAVIBILITY.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Quand vous êtes frappés au corps à corps, l'attaquant à 20% de chance d'être paralysé pendant 4 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6643,7 +6643,7 @@
     },
     "skills.TRH_HUNTING_TECHNIQUE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Technique de Chasse",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6661,7 +6661,7 @@
     },
     "skills.TRH_HUNTING_TECHNIQUE.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Dégâts Améliorés {0}%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6679,7 +6679,7 @@
     },
     "skills.TRH_HUNTING_TECHNIQUE.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "ATQ de BASE +8",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6697,7 +6697,7 @@
     },
     "skills.TRH_HUNTING_TECHNIQUE.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Précision Compétence +3%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6715,7 +6715,7 @@
     },
     "skills.TRH_HUNTING_TECHNIQUE.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "VIT ATQ +4%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6733,7 +6733,7 @@
     },
     "skills.TRH_POISON_TRAP.name": {
         "en": "",
-        "fr": "",
+        "fr": "Piège Empoisonné",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6751,61 +6751,7 @@
     },
     "skills.TRH_POISON_TRAP.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRH_POISON_TRAP.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRH_POISON_TRAP.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRH_POISON_TRAP.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Une fois activé, empoisonne 8 ennemis dans un rayon de 6 mètres autour du piège, réduisant la VIT ATQ de 80% et RD DGTS de 5% et les empêche de lancer des sorts pendant 5 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6823,7 +6769,7 @@
     },
     "skills.TRH_VENOM_ESSENCE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Essence Vénéneuse",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6841,7 +6787,7 @@
     },
     "skills.TRH_VENOM_ESSENCE.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Les attaques empoisonnent la cible, elle subit 1,2 dégâts par seconde pendant 10 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6859,7 +6805,7 @@
     },
     "skills.TRH_VENOM_ESSENCE.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Temps de Recharge de Flèche Empoisonnée -2 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6877,7 +6823,7 @@
     },
     "skills.TRH_VENOM_ESSENCE.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Peut s'accumuler 5 fois",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6895,7 +6841,7 @@
     },
     "skills.TRH_VENOM_ESSENCE.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Pour chaque accumulation de l'effet poison réduisez RD DGTS de 2% ",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6913,7 +6859,7 @@
     },
     "skills.TRH_NIMBLENESS.name": {
         "en": "",
-        "fr": "",
+        "fr": "Agilité",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6931,7 +6877,7 @@
     },
     "skills.TRH_NIMBLENESS.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente Vitesse d'Attaque de {0}%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6949,7 +6895,7 @@
     },
     "skills.TRH_NIMBLENESS.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "ATQ de Base +8",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6967,7 +6913,7 @@
     },
     "skills.TRH_NIMBLENESS.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Dégâts Améliorés +2%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -6985,7 +6931,7 @@
     },
     "skills.TRH_NIMBLENESS.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "VIT ATQ +5%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7003,7 +6949,7 @@
     },
     "skills.TRH_FEIGN_DEATH.name": {
         "en": "",
-        "fr": "",
+        "fr": "Feindre la Mort",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7021,61 +6967,7 @@
     },
     "skills.TRH_FEIGN_DEATH.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRH_FEIGN_DEATH.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRH_FEIGN_DEATH.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRH_FEIGN_DEATH.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Feindre la Mort augmente votre VIT de 120. Les potions peuvent être utiliés. Vous ne serez pas attaqué mais ne pourrez pas non plus attaquer les autres. Dure 4 sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7093,7 +6985,7 @@
     },
     "skills.TRH_ENHC_TRAP.name": {
         "en": "",
-        "fr": "",
+        "fr": "Piège Paralyzant Amélioré",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7111,7 +7003,7 @@
     },
     "skills.TRH_ENHC_TRAP.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Piège Paralyzant inflige {0} de dégâts supplémentaires",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7129,7 +7021,7 @@
     },
     "skills.TRH_ENHC_TRAP.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Temps de Recharge de Piège Paralyzant réduit de 5 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7147,7 +7039,7 @@
     },
     "skills.TRH_ENHC_TRAP.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Durée de la paralysie augmenté de 2 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7165,7 +7057,7 @@
     },
     "skills.TRH_ENHC_TRAP.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Durée du piège +45 sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7183,7 +7075,7 @@
     },
     "skills.TRH_HUNT.name": {
         "en": "",
-        "fr": "",
+        "fr": "Chasse",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7201,7 +7093,7 @@
     },
     "skills.TRH_HUNT.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente Précision de {0}% et Précision Compétence de {0}%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7219,7 +7111,7 @@
     },
     "skills.TRH_HUNT.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Increases Crit Accuracy by 2%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7237,7 +7129,7 @@
     },
     "skills.TRH_HUNT.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Précision Compétence Critique +3%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7255,7 +7147,7 @@
     },
     "skills.TRH_HUNT.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Les attaques normales ont 2% de chance d'étourdir la cible pendant 1 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7273,7 +7165,7 @@
     },
     "skills.TRH_GRAPPLE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Grappin",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7291,61 +7183,7 @@
     },
     "skills.TRH_GRAPPLE.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRH_GRAPPLE.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRH_GRAPPLE.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRH_GRAPPLE.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Inflige 600 de Dégâts Sacrés, l'attirant à vous et l'étourdissant pendant 2 sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7363,7 +7201,7 @@
     },
     "skills.TRH_ENHC_MULTI_ARROW.name": {
         "en": "",
-        "fr": "",
+        "fr": "Flèches Multiples Améliorées",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7381,7 +7219,7 @@
     },
     "skills.TRH_ENHC_MULTI_ARROW.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Les dégâts de Flèches Multiples sont augmentés de {0}.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7399,7 +7237,7 @@
     },
     "skills.TRH_ENHC_MULTI_ARROW.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Les dégâts de Flèches Multiples sont augmentés de  200.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7417,7 +7255,7 @@
     },
     "skills.TRH_ENHC_MULTI_ARROW.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Flèche Multiple ralenti les cibles de 20% pendant 3 sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7435,7 +7273,7 @@
     },
     "skills.TRH_ENHC_MULTI_ARROW.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Compétence Critique de Flèches Multiples augmentée de 8%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7453,7 +7291,7 @@
     },
     "skills.TRH_VOLLEY.name": {
         "en": "",
-        "fr": "",
+        "fr": "Vollée",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7471,61 +7309,7 @@
     },
     "skills.TRH_VOLLEY.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRH_VOLLEY.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRH_VOLLEY.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRH_VOLLEY.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Supprime la zone ciblée, infligeant 180% de dégâts à tous les ennemis. Réduis la Vitesse des cibles de 10% pendant 8 sec. Peut s'accumuler 3 fois.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7543,7 +7327,7 @@
     },
     "skills.TRH_MK3_ARROW_SHOT.name": {
         "en": "",
-        "fr": "",
+        "fr": "MK-III Tir",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7561,61 +7345,7 @@
     },
     "skills.TRH_MK3_ARROW_SHOT.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRH_MK3_ARROW_SHOT.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRH_MK3_ARROW_SHOT.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRH_MK3_ARROW_SHOT.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Déploie un MK-III, infligeant 80% de dégâts aux cibles dans la zone. Dure 10 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7633,7 +7363,7 @@
     },
     "skills.TRH_ARROW_SHOT.name": {
         "en": "",
-        "fr": "",
+        "fr": "Tir Chargé",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7651,7 +7381,7 @@
     },
     "skills.TRH_ARROW_SHOT.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente la portée d'attaque de 1 et Attaque Sacrée de {0}",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7669,7 +7399,7 @@
     },
     "skills.TRH_ARROW_SHOT.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "PM max +250",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7687,7 +7417,7 @@
     },
     "skills.TRH_ARROW_SHOT.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "VIT ATQ +5%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7705,7 +7435,7 @@
     },
     "skills.TRH_ARROW_SHOT.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Sacrée +1000",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7723,7 +7453,7 @@
     },
     "skills.TRH_RADICAL.name": {
         "en": "",
-        "fr": "",
+        "fr": "Radicale",
         "es": "",
         "ch": "",
         "kr": "",
@@ -7741,61 +7471,7 @@
     },
     "skills.TRH_RADICAL.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRH_RADICAL.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRH_RADICAL.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TRH_RADICAL.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Toutes les 10 attaques, la durée d'Ombre Intérieur est augmentée de 1 sec",
         "es": "",
         "ch": "",
         "kr": "",
